@@ -2,6 +2,7 @@
 
 * Support for "private flights" added
 * Airports, cities, IATA and ICAO codes capitalized when entering new airports
+* Bugs in airport ICAO codes for stats fixed
 
 <b>2008-09-13</b>
 
